modification of favorite icon

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,10 +45,6 @@ a {
     } */
 }
 
-img {
-  object-fit: cover;
-}
-
 /* Basic typography style for copy text */
 /* par défaut: Roboto 16px 400 */
 body {
@@ -292,11 +288,111 @@ header {
     opacity: 1;
     visibility: visible;
   }
+  25% {
+    opacity: 0.25;
+    visibility: visible;
+  }
   100% {
     opacity: 0;
     visibility: hidden; /* à cause du z-index */
   }
 }
+/***** button HEART *****/
+.heart {
+  position: relative;
+  width: 22px;
+  height: 22px;
+}
+.heart .empty-heart {
+  position: absolute;
+  visibility: visible;
+  opacity: 1;
+  transition: all 1000ms;
+}
+.heart .full-heart {
+  position: absolute;
+  visibility: hidden;
+  opacity: 0;
+  transition: all 1000ms;
+}
+.heart:hover {
+  cursor: pointer;
+}
+.heart:hover .full-heart {
+  visibility: visible;
+  opacity: 1;
+}
+.heart:hover .empty-heart {
+  visibility: hidden;
+  opacity: 0;
+}
+
+/*     .empty-heart {
+        position: absolute;
+        visibility: visible;
+        opacity: 1;
+        transition: all 1000ms;
+
+    }
+    .full-heart {
+        position: absolute;
+        visibility: hidden;
+        opacity: 0;
+        transition: all 1000ms;
+
+    } */
+/* .card__icon {
+    position: relative;
+    border: 1px solid;
+    font-size: 22px;
+    justify-content: flex-end;
+    width: 22px;
+    height: 22px; 
+    margin-right: 25px;
+    .empty-heart {
+        position: absolute;
+        visibility: visible;
+        transition: all 1000ms ;
+    }
+    .full-heart {
+        position: absolute;
+        visibility: hidden;
+        opacity: 0;
+        transition: all 1000ms;
+    }
+    &:hover {
+        .full-heart {
+            visibility: visible;
+            opacity: 1;
+        }
+        .empty-heart {
+            visibility: hidden;
+        }
+    }
+
+} */
+/*     .empty-heart { 
+        position: absolute; 
+        visibility: visible; 
+        transform: scale(1); 
+        transition: transform 500ms; 
+        &:active { 
+            visibility: hidden; 
+            cursor: pointer; 
+        } 
+    }
+
+.anim-heart { 
+    position: absolute; 
+    color: $secondary; 
+    opacity: 0; 
+    &:active { 
+        transform: scale(1.1); 
+        visibility: visible; 
+        cursor: pointer; 
+        opacity: 1; 
+    } 
+} */
 /***** BUTTON *****/
 .btn {
   margin: 27px auto;
@@ -339,6 +435,7 @@ h2 {
 h3 {
   font-size: 1.125rem;
   font-weight: 700;
+  padding-bottom: 5px;
 }
 
 /* div Location */
@@ -423,7 +520,7 @@ h3 {
 /* section Food */
 .food {
   background-color: #F6F6F6;
-  padding: 54px 20px 46px 20px;
+  padding: 54px 17px 46px 17px;
 }
 .food h2 {
   margin-bottom: 28px;
@@ -442,21 +539,17 @@ h3 {
   position: relative;
   flex: 1 1 0;
 }
-.card img {
+.card__cover {
+  object-fit: cover;
   height: 175px;
   width: 100%;
   border-radius: 15px 15px 0 0;
-}
-.card__content {
-  padding: 16px 0 16px 13px;
-}
-.card__content p {
-  font-weight: 300;
 }
 .card__new {
   position: absolute;
   right: 22px;
   top: 13px;
+  z-index: 2;
   background-color: #99E2D0;
   color: #008665;
   border-radius: 2px;
@@ -470,48 +563,21 @@ h3 {
   font-weight: 500;
   font-size: 0.9rem;
 }
-.card__icon {
-  position: absolute;
-  bottom: 33px;
-  right: 25px;
-  width: 22px;
-  height: 22px;
+.card__bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
-.card__icon input[type=checkbox] {
-  -webkit-appearance: none;
-  appearance: none;
+.card__content {
+  padding: 16px 0 16px 13px;
 }
-.card__icon input[type=checkbox]:hover {
-  cursor: pointer;
+.card__content p {
+  font-weight: 300;
 }
-.card__icon input[type=checkbox]::before {
-  display: block;
-  content: "";
-  background-image: url("../images/icons/heartempty.svg"); /*revoir le chemin */
-  background-size: 22px;
-  height: 22px;
-  width: 22px;
-  transition: background-image 1000ms; /*ne fonctionne pas avec Firefox */
-  /*duration | timing-function | delay | iteration-count | direction | fill-mode | play-state | */
-}
-.card__icon input[type=checkbox]:checked::before { /* rajouter focus et hover */
-  display: inline-flex;
-  content: "";
-  background-image: url("../images/icons/heartfull.svg");
-  background-size: 22px;
-  height: 22px;
-  width: 22px;
-  /*animation: 1000ms ease-in-out animlove; /* pour Firefox */
+.card .heart {
+  margin-right: 20px;
 }
 
-/* @keyframes animlove {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-} */
 /***** Media queries for home page *****/
 @media screen and (min-width: 768px) {
   .search {
@@ -562,8 +628,7 @@ h3 {
 }
 .restaurant h1 {
   text-align: start;
-  margin-left: 4px;
-  padding: 0;
+  padding: 0 0 0 4px;
   font-family: "Shrikhand", cursive;
   font-weight: 400;
   font-style: italic;
@@ -583,21 +648,13 @@ h3 {
 }
 .restaurant h3 {
   font-weight: 500;
-  padding-bottom: 5px;
 }
 
-/* .cover {
-    height: 275px;
-    background-attachment: local;
-    background-image: url('/assets/images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg');
-    background-repeat: no-repeat;
-    background-position: 0 0 ;
-    background-size: contain;
-} */
 .cover {
   height: 220px;
 }
 .cover img {
+  object-fit: cover;
   height: 275px;
   width: 100%;
 }
@@ -610,6 +667,11 @@ h3 {
   display: flex;
   flex-direction: column;
   gap: 40px;
+}
+.menu__title {
+  display: flex;
+  align-items: center;
+  gap: 35px; /* 24px dans la version responsive */
 }
 .menu p {
   font-size: 15px;
@@ -635,9 +697,10 @@ h3 {
   height: 100%;
 }
 .menu__card__text {
-  padding: 15px;
+  /*padding: 15px;*/
+  padding: 15px 0 15px 15px;
   overflow: hidden;
-  min-width: 65%;
+  min-width: auto;
 }
 .menu__card__text h3, .menu__card__text p {
   width: 100%;
@@ -655,13 +718,15 @@ h3 {
   height: 100%;
 }
 .menu__card__right .price {
-  min-width: 50%; /*min-width */
+  width: 50%; /*min-width */
   display: flex;
   justify-content: center;
   align-items: flex-end;
   font-size: 15px;
   font-weight: 700;
-  padding: 10px 15px;
+  /*padding: 10px 15px;*/
+  padding: 0 20px 10px 5px;
+  transition: all 1000ms ease-in-out;
 }
 .menu__card__right .add {
   width: 0%;
@@ -679,6 +744,9 @@ h3 {
 .menu__card:hover .add {
   width: 50%;
   padding: 30px;
+}
+.menu__card:hover .price {
+  padding: 0 10px 10px 5px;
 }
 
 /*# sourceMappingURL=style.css.map */
