--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,6 +23,7 @@
 @import
   'components/forms',
   'components/loader',
+  'components/heart',
   'components/button';
 
 // 6. Page-specific styles
