--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -9,7 +9,6 @@
         padding: 0 0 0 4px;
         font-family: $font-title;
         font-weight: 400;
-        font-style: italic;
         font-size: 1.75rem;
     }
     h2 {
@@ -49,8 +48,7 @@
     &__title {
         display: flex;
         align-items: center;
-        gap: 35px; /* 24px dans la version responsive */
-        /*justify-content: flex-start;*/
+        gap: 35px; 
     }
     p {
         font-size: 15px;
@@ -115,7 +113,7 @@
             font-weight: $font-bold;
             /*padding: 10px 15px;*/
             padding: 0 20px 10px 5px;
-            transition: all 1000ms ease-in-out;
+            transition: all 300ms ease-in-out;
       }
         .add {
             width: 0%;
@@ -124,7 +122,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            transition: all 1000ms ease-in-out;
+            transition: all 300ms ease-in-out;
             .fa-circle-check {
                 color: white;
                 line-height: 20px;
@@ -142,3 +140,6 @@
     }
 }  
 
+
+/***** Media queries for restaurant page *****/
+@include responsive-restaurant;
