--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -62,13 +62,13 @@
         gap: 12px;
     }
     .entrees {
-        animation: animentrees 800ms ease-out 50ms 1 both;
+        animation: anim-food 800ms ease-out 50ms 1 both;
     }
     .plats {
-        animation: animentrees 800ms ease-out 550ms 1 both;
+        animation: anim-food 800ms ease-out 550ms 1 both;
     }
     .desserts {
-        animation: animentrees 800ms ease-out 1150ms 1 both;
+        animation: anim-food 800ms ease-out 1150ms 1 both;
     }
 }
 
