--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -188,12 +188,12 @@ header {
   top: 0;
   left: 0;
   z-index: 999;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
-  animation: 300ms ease-out 2700ms 1 forwards loaderanim;
+  animation: 1250ms ease-in-out 1750ms 1 forwards loaderanim;
 }
 .loader .clock {
   width: 200px;
@@ -214,7 +214,7 @@ header {
   background-color: #99E2D0;
   box-shadow: 0 0 5px 2px #99E2D0;
   z-index: 1;
-  animation: 425ms ease-out 1745ms 1 forwards centeranim;
+  animation: 405ms ease-out 1745ms 1 forwards centeranim;
 }
 .loader .clock__little {
   position: absolute;
@@ -237,29 +237,15 @@ header {
   transform-origin: 56px 95px;
   animation: 1700ms ease-out 300ms 1 forwards bigspin;
 }
-.loader__logo {
-  display: inline-block;
-  font-family: "Shrikhand", cursive;
-  font-size: 1.5rem;
-  position: absolute;
-  top: 80px;
-  left: 35.5px;
-  opacity: 0;
-  animation: 955ms ease-in-out 1445ms 1 forwards textanim;
-}
 
 @keyframes bigspin {
   0% {
     transform: rotate(0);
     opacity: 1;
   }
-  85% {
-    transform: rotate(-360deg);
-    opacity: 1;
-  }
   100% {
     transform: rotate(-360deg);
-    opacity: 0;
+    opacity: 1;
   }
 }
 @keyframes littlespin {
@@ -267,13 +253,9 @@ header {
     transform: rotate(0);
     opacity: 1;
   }
-  85% {
-    transform: rotate(30deg);
-    opacity: 1;
-  }
   100% {
     transform: rotate(30deg);
-    opacity: 0;
+    opacity: 1;
   }
 }
 @keyframes centeranim {
@@ -284,33 +266,9 @@ header {
     opacity: 0;
   }
 }
-@keyframes textanim {
-  0% {
-    transform: rotateZ(-180deg);
-    opacity: 0;
-  }
-  74% {
-    opacity: 1;
-    filter: blur(20px);
-    /*letter-spacing: -2em;*/
-    transform: rotateZ(-180deg);
-    /*scale: 0;*/
-  }
-  100% {
-    opacity: 1;
-    filter: blur(0);
-    /*letter-spacing: initial;*/
-    transform: rotateZ(0deg);
-    /*scale: 1;*/
-  }
-}
 @keyframes loaderanim {
   0% {
     opacity: 1;
-    visibility: visible;
-  }
-  25% {
-    opacity: 0.25;
     visibility: visible;
   }
   100% {
