--- a/sass/components/_loader.scss
+++ b/sass/components/_loader.scss
@@ -5,12 +5,12 @@
     top: 0;
     left: 0;
     z-index: 999;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
-    animation: 300ms ease-out 2700ms 1 forwards loaderanim;
+    animation: 1250ms ease-in-out 1750ms 1 forwards loaderanim;
 
     .clock {
         width: 200px;
@@ -30,7 +30,7 @@
             background-color:$tertiary-color;
             box-shadow: 0 0 5px 2px $tertiary-color;
             z-index: 1;
-            animation: 425ms ease-out 1745ms 1 forwards centeranim;
+            animation: 405ms ease-out 1745ms 1 forwards centeranim;
         }
         &__little {
             position: absolute;
@@ -54,16 +54,6 @@
             }
         }
     }
-    &__logo {
-        display:inline-block;
-        font-family: $font-title;
-        font-size: 1.5rem;
-        position: absolute;
-        top: 80px;
-        left: 35.5px;
-        opacity: 0;
-        animation: 955ms ease-in-out 1445ms 1 forwards textanim;
-    }
 }
 
 @keyframes bigspin {
@@ -71,13 +61,9 @@
         transform: rotate(0);
         opacity: 1;
     }
-    85% { 
+    100% { 
         transform: rotate(-360deg); 
         opacity: 1;
-    }
-    100% {
-        transform: rotate(-360deg);
-        opacity: 0;
     }
 }
 
@@ -86,13 +72,9 @@
         transform: rotate(0);
         opacity: 1;
     }
-    85% { 
+    100% { 
         transform: rotate(30deg); 
         opacity: 1;
-    }
-    100% {
-        transform: rotate(30deg);
-        opacity: 0;
     }
 }
 
@@ -105,35 +87,10 @@
     }
 }
 
-@keyframes textanim {
-    0% {
-        transform: rotateZ(-180deg);
-        opacity: 0;
-    }
-    74% {
-        opacity: 1;
-        filter: blur(20px);
-        /*letter-spacing: -2em;*/
-        transform: rotateZ(-180deg);
-        /*scale: 0;*/
-    }
-    100% {
-        opacity: 1;
-        filter: blur(0);
-        /*letter-spacing: initial;*/
-        transform: rotateZ(0deg);
-        /*scale: 1;*/
-    }
-} 
-
 @keyframes loaderanim {
     0% {
         opacity: 1;
         visibility: visible;        
-    }
-    25% {
-        opacity: 0.25;
-        visibility: visible;
     }
     100% {
         opacity: 0;
