--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,18 +1,18 @@
 // 1. Configuration and helpers
 @import
-  'abstracts/variables',
-  'abstracts/functions',
-  'abstracts/mixins';
+'abstracts/functions',
+'abstracts/mixins',
+'abstracts/variables';
 
 // 2. Vendors
-@import
-  'vendors/normalize';
+
 
 // 3. Base stuff
 @import
   'base/animations',
   'base/base',
   'base/fonts',
+  'base/reset',
   'base/typography';
 
 // 4. Layout-related sections
@@ -22,10 +22,10 @@
 
 // 5. Components
 @import
+'components/button',
   'components/forms',
-  'components/loader',
   'components/heart',
-  'components/button';
+  'components/loader';
 
 // 6. Page-specific styles
 @import
