--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,5 @@
 @charset "UTF-8";
 /* à revoir: hue saturation lightness opacity */
-/* Forms
-   ========================================================================== */
-button,
-input {
-  font-family: inherit;
-  color: inherit;
-  font-size: 100%;
-  /* line-height: 1.15; Change the font styles in all browsers: à revoir */
-  margin: 0; /* Remove the margin in Firefox and Safari: à revoir */
-}
-
 /* Animations of restaurant page */
 @keyframes anim-food {
   0% {
@@ -51,9 +40,7 @@ body {
   border: 0;
 }
 
-/**
- * Basic styles for links
- */
+/*** Basic styles for links ***/
 a {
   color: inherit;
   text-decoration: none;
@@ -61,6 +48,17 @@ a {
       color: $text-color;
       text-decoration: underline;
     } */
+}
+
+/* Forms
+   ========================================================================== */
+button,
+input {
+  font-family: inherit;
+  color: inherit;
+  font-size: 100%;
+  /* line-height: 1.15; Change the font styles in all browsers: à revoir */
+  margin: 0; /* Remove the margin in Firefox and Safari: à revoir */
 }
 
 /* Basic typography style for copy text */
@@ -91,8 +89,9 @@ header {
   position: absolute;
   width: 30px;
   line-height: 30px;
-  top: 17px;
   left: 17px;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 /***** Media queries for header *****/
@@ -104,9 +103,6 @@ header {
 @media screen and (min-width: 1440px) {
   header {
     padding: 26px 0;
-  }
-  header .header__icon {
-    top: 33px;
   }
 }
 /***** FOOTER *****/
@@ -181,101 +177,32 @@ header {
     margin-right: 74px;
   }
 }
-/***** LOADER *****/
-.loader {
-  background-color: #F6F6F6;
-  position: absolute; /* à revoir */
-  top: 0;
-  left: 0;
-  z-index: 999;
-  height: 100vh;
-  width: 100vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  animation: 1250ms ease-in-out 1750ms 1 forwards loaderanim;
+/***** BUTTON *****/
+.btn {
+  margin: 27px auto;
+  color: white;
+  background: linear-gradient(to top, #9356DC, #FF79DA);
+  border-radius: 25px;
+  font-weight: 500;
+  height: 50px;
+  padding: 13px 20px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25); /*revoir la couleur */
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
+  opacity: 1;
+  transition: opacity 300ms ease-in-out;
 }
-.loader .clock {
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
-  position: relative;
-  border: 5px double #99E2D0;
-  background: radial-gradient(#9356DC, #FF79DA);
-  box-shadow: 0 0 20px #99E2D0; /* offset-x | offset-y | blur-radius | spread-radius | color */
+.btn:hover { /*mais ça change aussi l'opacité du texte */
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.35);
+  opacity: 0.85;
 }
-.loader .clock__center {
-  position: absolute;
-  width: 20px;
-  height: 20px;
-  top: calc(50% - 10px); /* 50% moins la moitié de height */
-  left: calc(50% - 10px);
-  border-radius: 50%;
-  background-color: #99E2D0;
-  box-shadow: 0 0 5px 2px #99E2D0;
-  z-index: 1;
-  animation: 405ms ease-out 1745ms 1 forwards centeranim;
-}
-.loader .clock__little {
-  position: absolute;
-  width: 70px;
-  top: 35px;
-  left: 61px;
-}
-.loader .clock__little img {
-  transform-origin: 35px 60px;
-  animation: 1700ms ease-out 300ms 1 forwards littlespin;
-}
-.loader .clock__big {
-  position: absolute;
-  width: 110px;
-  top: 0px;
-  left: 42px;
-  transform: rotateY(180deg);
-}
-.loader .clock__big img {
-  transform-origin: 56px 95px;
-  animation: 1700ms ease-out 300ms 1 forwards bigspin;
+.btn__menu { /* revoir les marges */
+  display: block;
+  text-align: center;
+  width: fit-content;
+  padding: 13px 50px;
+  margin: 0 auto;
 }
 
-@keyframes bigspin {
-  0% {
-    transform: rotate(0);
-    opacity: 1;
-  }
-  100% {
-    transform: rotate(-360deg);
-    opacity: 1;
-  }
-}
-@keyframes littlespin {
-  0% {
-    transform: rotate(0);
-    opacity: 1;
-  }
-  100% {
-    transform: rotate(30deg);
-    opacity: 1;
-  }
-}
-@keyframes centeranim {
-  0% {
-    opacity: 1;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-@keyframes loaderanim {
-  0% {
-    opacity: 1;
-    visibility: visible;
-  }
-  100% {
-    opacity: 0;
-    visibility: hidden; /* à cause du z-index */
-  }
-}
 /***** button HEART *****/
 .heart {
   position: relative;
@@ -372,32 +299,101 @@ header {
         opacity: 1; 
     } 
 } */
-/***** BUTTON *****/
-.btn {
-  margin: 27px auto;
-  color: white;
-  background: linear-gradient(to top, #9356DC, #FF79DA);
-  border-radius: 25px;
-  font-weight: 500;
-  height: 50px;
-  padding: 13px 20px;
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25); /*revoir la couleur */
-  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25);
-  opacity: 1;
-  transition: opacity 300ms ease-in-out;
+/***** LOADER *****/
+.loader {
+  background-color: #F6F6F6;
+  position: absolute; /* à revoir */
+  top: 0;
+  left: 0;
+  z-index: 999;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: 1250ms ease-in-out 1750ms 1 forwards loaderanim;
 }
-.btn:hover { /*mais ça change aussi l'opacité du texte */
-  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.35);
-  opacity: 0.85;
+.loader .clock {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  position: relative;
+  border: 5px double #99E2D0;
+  background: radial-gradient(#9356DC, #FF79DA);
+  box-shadow: 0 0 20px #99E2D0; /* offset-x | offset-y | blur-radius | spread-radius | color */
 }
-.btn__menu { /* revoir les marges */
-  display: block;
-  text-align: center;
-  width: fit-content;
-  padding: 13px 50px;
-  margin: 0 auto;
+.loader .clock__center {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: calc(50% - 10px); /* 50% moins la moitié de height */
+  left: calc(50% - 10px);
+  border-radius: 50%;
+  background-color: #99E2D0;
+  box-shadow: 0 0 5px 2px #99E2D0;
+  z-index: 1;
+  animation: 405ms ease-out 1745ms 1 forwards centeranim;
+}
+.loader .clock__little {
+  position: absolute;
+  width: 70px;
+  top: 35px;
+  left: 61px;
+}
+.loader .clock__little img {
+  transform-origin: 35px 60px;
+  animation: 1700ms ease-out 300ms 1 forwards littlespin;
+}
+.loader .clock__big {
+  position: absolute;
+  width: 110px;
+  top: 0px;
+  left: 42px;
+  transform: rotateY(180deg);
+}
+.loader .clock__big img {
+  transform-origin: 56px 95px;
+  animation: 1700ms ease-out 300ms 1 forwards bigspin;
 }
 
+@keyframes bigspin {
+  0% {
+    transform: rotate(0);
+    opacity: 1;
+  }
+  100% {
+    transform: rotate(-360deg);
+    opacity: 1;
+  }
+}
+@keyframes littlespin {
+  0% {
+    transform: rotate(0);
+    opacity: 1;
+  }
+  100% {
+    transform: rotate(30deg);
+    opacity: 1;
+  }
+}
+@keyframes centeranim {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+@keyframes loaderanim {
+  0% {
+    opacity: 1;
+    visibility: visible;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden; /* à cause du z-index */
+  }
+}
 /***** HOME *****/
 h1 {
   font-size: 1.5rem;
@@ -544,8 +540,11 @@ h3 {
 }
 .card__bottom {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+}
+.card__bottom a {
+  display: block;
+  flex-grow: 1;
 }
 .card__content {
   padding: 16px 0 16px 13px;
@@ -649,7 +648,10 @@ h3 {
 .menu__title {
   display: flex;
   align-items: center;
-  gap: 35px;
+  justify-content: space-between;
+}
+.menu__title .heart {
+  margin-right: 27px;
 }
 .menu p {
   font-size: 15px;
@@ -746,6 +748,15 @@ h3 {
   .menu {
     width: 73%;
     margin: 0 auto;
+    align-items: center;
+  }
+  .menu .entrees,
+  .menu .plats,
+  .menu .desserts {
+    width: 60%;
+  }
+  .menu__title {
+    gap: 24px;
   }
 }
 @media screen and (min-width: 1440px) {
@@ -756,16 +767,7 @@ h3 {
     height: 383px;
   }
   .menu {
-    align-items: center;
     padding: 50px 0 40px 0;
-  }
-  .menu__title {
-    gap: 24px;
-  }
-  .menu .entrees,
-  .menu .plats,
-  .menu .desserts {
-    width: 60%;
   }
 }
 
