--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -24,9 +24,7 @@ body {
   border: 0;
 }
 
-/**
- * Basic styles for links
- */
+/*** Basic styles for links ***/
 a {
   color: inherit;
   text-decoration: none;
