--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -25,8 +25,9 @@ header {
         position: absolute;
         width: 30px;
         line-height: 30px;
-        top: 17px;
         left: 17px;
+        top: 50%;
+        transform: translateY(-50%);
     }
 }
 
