clean Sass architecture

--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -1,4 +1,7 @@
-/// Animations
+// -----------------------------------------------------------------------------
+// This file contains all keyframes
+// -----------------------------------------------------------------------------
+
 /* Animations of restaurant page */
 @keyframes anim-food {
     0% {
