--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-/* à revoir: hue saturation lightness opacity */
+/* hue saturation lightness opacity */
 /* Animations of restaurant page */
 @keyframes anim-food {
   0% {
@@ -18,6 +18,7 @@
     filter: blur(0);
   }
 }
+/*** Basic styles for body ***/
 body {
   display: flex;
   justify-content: center;
@@ -26,7 +27,7 @@ body {
 .container {
   display: flex;
   flex-direction: column;
-  min-height: 100vh; /* pour que le footer reste en bas avec margin-top auto */
+  min-height: 100vh; /* for footer position */
   width: 100%;
   max-width: 1920px;
 }
@@ -44,25 +45,17 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-  /*   @include on-event {
-      color: $text-color;
-      text-decoration: underline;
-    } */
 }
 
-/* Forms
-   ========================================================================== */
-button,
-input {
+/*** reset styles ***/
+button {
   font-family: inherit;
   color: inherit;
   font-size: 100%;
-  /* line-height: 1.15; Change the font styles in all browsers: à revoir */
-  margin: 0; /* Remove the margin in Firefox and Safari: à revoir */
+  margin: 0;
 }
 
 /* Basic typography style for copy text */
-/* par défaut: Roboto 16px 400 */
 body {
   font-family: "Roboto", sans-serif;
 }
@@ -564,7 +557,6 @@ h3 {
   .search ol {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap; /*cnécessaire ? */
     gap: 24px;
   }
   .search__link {
