--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -1,13 +1,13 @@
-/* Forms
-   ========================================================================== */
+// -----------------------------------------------------------------------------
+// This file contains all the reset styles
+// -----------------------------------------------------------------------------
 
- button,
- input {
+/*** reset styles ***/
+ button {
    font-family: inherit;
    color: inherit;
    font-size: 100%; 
-   /* line-height: 1.15; Change the font styles in all browsers: à revoir */
-   margin: 0; /* Remove the margin in Firefox and Safari: à revoir */
+   margin: 0; 
  }
 
 
