--- a/sass/components/_heart.scss
+++ b/sass/components/_heart.scss
@@ -1,3 +1,7 @@
+// -----------------------------------------------------------------------------
+// This file contains all styles related to favorite heart icon
+// -----------------------------------------------------------------------------
+
 /***** button HEART *****/
 .heart {
     position: relative;
