--- a/sass/components/_loader.scss
+++ b/sass/components/_loader.scss
@@ -1,3 +1,7 @@
+// -----------------------------------------------------------------------------
+// This file contains all styles related to the loader of home page
+// -----------------------------------------------------------------------------
+
 /***** LOADER *****/
 .loader {
     background-color: $background-color;
