--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -11,14 +11,13 @@
     font-weight: $font-medium;
     height: 50px;
     padding: 13px 20px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.25); /*revoir la couleur */
     box-shadow: 0 4px 10px opacify($shadow-color, 0.1); 
     opacity: 1;
     transition: opacity 300ms ease-in-out;
-    &:hover { /*mais ça change aussi l'opacité du texte */
+    &:hover {
         @include buttonhover;
     }
-    &__menu { /* revoir les marges */
+    &__menu {
         display: block;
         text-align: center;
         width: fit-content;
