--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -15,7 +15,7 @@ $font-medium: 500;
 $font-bold: 700;
 
 /// Font colors
-$font-color-variant: hsla(0, 0%, 0%, 21); /* hue saturation lightness opacity */
+$font-color-variant: hsla(0, 0%, 0%, 21); 
 
 
 /// Colors
