--- a/sass/base/_animations.scss
+++ b/sass/base/_animations.scss
@@ -2,7 +2,7 @@
 // This file contains all keyframes
 // -----------------------------------------------------------------------------
 
-/* Animations of restaurant page */
+/*** Animations of restaurant page ***/
 @keyframes anim-food {
     0% {
         transform: translateY(-100px);
