--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -17,7 +17,7 @@ header {
 }
 
 .header {
-    &__title { /* revoir la couleur du texte */
+    &__title { 
         font-family: $font-title;
         font-size: 30px;
     }
@@ -31,7 +31,7 @@ header {
     }
 }
 
-/***** Media queries for header *****/
+/*** Media queries for header ***/
 @include responsive-header;
 
 
