--- a/sass/pages/_restaurant.scss
+++ b/sass/pages/_restaurant.scss
@@ -43,7 +43,7 @@
 .menu {
     width: 100%;
     background-color: $background-color;
-    border-radius: 50px 50px 0 0; /* trouver les bonnes valeurs */
+    border-radius: 50px 50px 0 0;
     padding: 35px 13px 40px 13px;
     display: flex;
     flex-direction: column;
@@ -91,10 +91,8 @@
         height: 100%;
     }
     &__text {
-        /*padding: 15px;*/
         padding: 15px 0 15px 15px;
         overflow: hidden;
-        /*min-width: auto;*/
         h3, p {
             width: 100%;
             overflow: hidden;
@@ -106,24 +104,21 @@
         max-width: 35%;
         display: flex;
         justify-content: flex-end;
-        /*overflow: hidden;*/
         > * {
             height: 100%;
         }
         .price {
-            min-width: 50%; /*width */
+            min-width: 50%; 
             display: flex;
             justify-content: center;
             align-items: flex-end;
             font-size: 15px;
             font-weight: $font-bold;
-            /*padding: 10px 15px;*/
             padding: 0 15px 10px 5px;
             transition: padding 300ms ease-in-out;
       }
         .add {
             width: 0%;
-            /*overflow: hidden;*/
             background-color: $tertiary-color;
             display: flex;
             justify-content: center;
