--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -226,7 +226,7 @@ header {
 /***** LOADER *****/
 .loader {
   background-color: #F6F6F6;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   z-index: 999;
