--- a/sass/components/_loader.scss
+++ b/sass/components/_loader.scss
@@ -5,7 +5,7 @@
 /***** LOADER *****/
 .loader {
     background-color: $background-color;
-    position: absolute;
+    position:fixed;
     top: 0;
     left: 0;
     z-index: 999;
